[package]
name = "worker"
version = "0.1.0"
edition = "2021"


[dependencies]
postgresflow = { path = "../postgresflow" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres"] }
uuid = "1"
